comments fixed and development static folder added

--- a/templates/base.html
+++ b/templates/base.html
@@ -7,7 +7,7 @@
 
 {% block scripts %}{% endblock %}
 {% block stylesheets %}{% endblock %}
-<link rel="stylesheet" type="text/css" href="/web/css/base.css"/>
+<link rel="stylesheet" type="text/css" href="/static/base.css"/>
 
 </head>
 
