--- a/templates/index.html
+++ b/templates/index.html
@@ -4,22 +4,33 @@
 
 <div id="contentbox">
 
-{% for x in ideaslist %}
+{% for x in idealist %}
 	<div id="idea{{x.id}}" class="ideabox">
 		<a href=""><p class="ideatitle">{{x.idea_title}}</p></a>
 		<p> {{x.idea_text}} </p>
 		<!-- include media -->
 	</div>
-	<div class="commentbox">
-		{% for y in commentlist %}	
-		<div class="commentdiv">
-			<p> {{y.comment_text}} </p>
+	
+	{% for key,comments in commentlist.iteritems %}
+		
+		{% if key == x.id %}
+		
+		<div class="commentbox">
+		
+			{% for eachcomment in comments %}
+			<div class="commentdiv">
+				<p> {{ eachcomment }} </p>
+			</div>
+			{% endfor %}
+		
+		<form> <input type="text"> </form>
+		
 		</div>
-		{% endfor %}
-	</div>
-	<form>
-		<input type="text">
-	</form>
+		
+		{% endif %}
+	
+	{% endfor %}
+	
 {% endfor %}
 
 </div>
@@ -27,5 +38,8 @@
 <div class="submitdiv">
 	<h3 class="submittext"> Submit </h3>
 </div>
+
+<p> {{ idealist }} </p>
+<p> {{ commentlist }} </p>
 
 {% endblock content %}
